--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
+  </head>
+  <body>
+    <div id="nc-root"></div>
+    <script src="https://unpkg.com/decap-cms@3.10.0/dist/decap-cms.js"></script>
+  </body>
+</html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Content Manager</title>
     <script src="https://unpkg.com/decap-cms@3.10.0/dist/decap-cms.js"></script>
   </head>
   <body>
